[CT] Fix LatestNews vertical alignment

--- a/src/components/LatestNews/LatestNews.module.scss
+++ b/src/components/LatestNews/LatestNews.module.scss
@@ -24,5 +24,6 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
   }
 }
